<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="5dp"
    android:orientation="vertical"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greyish"
        android:padding="15dp">

        <TextView
            android:id="@+id/orderid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/orderid"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="29sp"
            android:textStyle="bold"></TextView>


        <TextView
            android:id="@+id/totalcost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/orderid"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="4dp"
            android:hint="@string/total_cost"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/orderid"
           android:layout_alignParentEnd="true"
            android:hint="@string/order_status"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"></TextView>

    </RelativeLayout>
</androidx.cardview.widget.CardView>