<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greyish"
        android:padding="15dp">

        <ImageView
            android:id="@+id/recycleritemimg"
            android:layout_width="90dp"
            android:layout_height="90dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/recycleritem1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/recycleritemimg"
            android:hint="@string/itemname"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/recyclerprice1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycleritem1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-2dp"
            android:layout_toRightOf="@+id/recycleritemimg"
            android:hint="@string/itemprice"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"></TextView>

        <RelativeLayout
            android:id="@+id/discnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerprice1"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:layout_toRightOf="@+id/recycleritemimg">

            <TextView
                android:id="@+id/itmdiscountdesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/itmdiscountprice"
                android:hint="@string/discount_description"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/itmdiscountprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:hint="@string/discount_price"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"></TextView>
        </RelativeLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>