<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Client.OrderDetails2">

    <RelativeLayout
        android:id="@+id/toolBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/backgroud">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/order_details"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"></TextView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/vendordets"
        android:layout_width="407dp"
        android:layout_height="109dp"
        android:layout_below="@+id/toolBar2"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bg3"
        android:elevation="4dp">

        <TextView
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/client_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/email2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="16dp"
            android:hint="@string/orderid2"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:hint="Order Status"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/status"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:hint="@string/total_cost"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"></TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/vendordets">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/prods3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/orderdetsrow"></androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>
</RelativeLayout>
