<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="5dp"
    android:orientation="vertical"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greyish"
        android:padding="15dp">

        <TextView
            android:id="@+id/prodid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:hint="@string/status"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/qtty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prodid"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:hint="@string/price_quantity"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/total1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prodid"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:hint="@string/total"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>

    </RelativeLayout>
</androidx.cardview.widget.CardView>