<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/backgroud">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"></TextView>

            <ImageView
                android:id="@+id/cordinates"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/shapestyle"
                android:focusable="false"
                android:focusableInTouchMode="false"
                app:srcCompat="@drawable/location" />

            <ImageView
                android:id="@+id/bk1"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/shapestyle"
                android:focusable="false"
                android:focusableInTouchMode="false"
                app:srcCompat="@drawable/back" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/profile"
            android:layout_width="77dp"
            android:layout_height="55dp"
            android:layout_below="@+id/rr"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="59dp"
            android:background="@drawable/imgcircle"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:srcCompat="@drawable/profile"></ImageView>

        <EditText
            android:id="@+id/editname"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_below="@+id/profile"
            android:layout_marginStart="5dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/profile"
            android:drawableLeft="@drawable/profile"
            android:hint="@string/enter_your_name"></EditText>

        <EditText
            android:id="@+id/editemail"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_below="@+id/editname"
            android:layout_marginStart="5dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/email"
            android:drawableLeft="@drawable/email"
            android:hint="@string/enter_your_email"></EditText>

        <EditText
            android:id="@+id/editphone"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_below="@+id/editemail"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/phone"
            android:drawableLeft="@drawable/phone"
            android:hint="@string/enter_your_phone_number"></EditText>

        <EditText
            android:id="@+id/editaddress"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_below="@+id/editphone"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/address"
            android:drawableLeft="@drawable/phone"
            android:hint="@string/enter_your_full_address"></EditText>

        <Button
            android:id="@+id/btnsgnup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editaddress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:background="@drawable/btnstyle"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="UPDATE"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold"></Button>

    </RelativeLayout>


</ScrollView>